[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nebula-data"
version = "0.1.0"
description = "Offline Orekit and Cartopy data bundle for the Nebula package."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
authors = [{ name = "Nathan Spencer", email = "nathanss1997@gmail.com" }]

[tool.hatch.build.targets.wheel]
packages = ["nebula_data"]
include = [
    "nebula_data/**",
]
exclude = [
    "**/.DS_Store",
    "**/.git",
    "**/._*",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "nebula_data/**",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "**/.DS_Store",
    "**/.git",
    "**/._*",
    "**/__pycache__/**",
    "**/*.pyc",
]
