[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nstk-data"
version = "0.1.0"
description = "Offline Orekit and Cartopy data bundle for Nebula Space Toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE*"]
authors = [
    { name = "Nathan Spencer", email = "nathanss1997@gmail.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["nstk_data"]
include = [
    "nstk_data/**",
]
exclude = [
    "**/.DS_Store",
    "**/.git",
    "**/._*",
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "nstk_data/**",
    "README.md",
    "pyproject.toml",
    "LICENSE*",
]
exclude = [
    "**/.DS_Store",
    "**/.git",
    "**/._*",
    "**/__pycache__/**",
    "**/*.pyc",
]